--- a/index.html
+++ b/index.html
@@ -693,18 +693,23 @@
                                 <i class="fa-regular fa-circle-check"></i>Nhóm nghề nghiệp phù hợp với bạn
                             </div>
                             <div class="result-group-items">
-                                <div class="result-group-item">Kĩ sư ngành tự động hóa</div>
+                                <div class="result-group-item">Lái xe con, taxi và xe tải hạng nhẹ</div>
                                 <div class="result-group-item">Vận hành máy</div>
                                 <div class="result-group-item">Kĩ sư ô tô</div>
-                                <div class="result-group-item">Lắp đặt điện</div>
-                                <div class="result-group-item">Lập trình viên</div>
-                                <div class="result-group-item">Kĩ sư thiết kế cảnh quang đô thị</div>
-                                <div class="result-group-item">Cơ khí ứng dụng</div>
+                                <div class="result-group-item">Trồng trọt</div>
+                                <div class="result-group-item">Chăn nuôi gia súc, gia cầm</div>
+                                <div class="result-group-item">Kĩ sư thiết kế cảnh quan đô thị</div>
+                                <div class="result-group-item">Kĩ thuật viên may mặc</div>
                                 <div class="result-group-item">Kĩ sư phần mềm</div>
-                                <div class="result-group-item">Kĩ thuật viên phòng thí nghiệm</div>
-                                <div class="result-group-item">Kĩ sư chế tạo máy</div>
+                                <div class="result-group-item">Kĩ sư và kĩ thuật viên lâm nghiệp</div>
+                                <div class="result-group-item">Kĩ sư cơ khí</div>
                                 <div class="result-group-item">Bảo hành, sửa chữa điện- điện tử</div>
-                                <div class="result-group-item">Kĩ sư công nghệ thông tin</div>
+                                <div class="result-group-item">Chuyên gia phát triển phần mềm</div>
+                            </div>
+                            <div class="result-details">
+                                <button class="result-details-btn">
+                                    <a href="#" class="button-content">Chi tiết</a> 
+                                </button>
                             </div>
                         </div>
                     </div>
@@ -722,18 +727,23 @@
                             </div>
                             <div class="result-group-items">
                                 <div class="result-group-item">Kĩ thuật viên y tế</div>
-                                <div class="result-group-item">Chuyên viên nghiên cứu thị trường</div>
-                                <div class="result-group-item">Kĩ thuật viên phòng thí nghiệm</div>
+                                <div class="result-group-item">Nhà thống kê</div>
+                                <div class="result-group-item">Kĩ thuật y sinh</div>
                                 <div class="result-group-item">Nhà sinh vật học</div>
-                                <div class="result-group-item">Nha sĩ/Dược sĩ</div>
-                                <div class="result-group-item">Kĩ sư phần mềm</div>
+                                <div class="result-group-item">Nha sĩ</div>
+                                <div class="result-group-item">Nhà thiên văn học</div>
                                 <div class="result-group-item">Nhà khảo cổ học</div>
                                 <div class="result-group-item">Giảng viên đại học</div>
-                                <div class="result-group-item">tiến sĩ các ngành KHTN và KHXH</div>
-                                <div class="result-group-item">Bác sĩ</div>
-                                <div class="result-group-item">Nhà khoa học</div>
+                                <div class="result-group-item">Nhà nghiên cứu khoa học xã hội</div>
+                                <div class="result-group-item">Nhà nông học</div>
+                                <div class="result-group-item">Kĩ sư và kĩ thuật viên công nghệ sinh học</div>
                                 <div class="result-group-item">Nhà nghiên cứu địa chất</div>
-                                <div class="result-group-item">Nghệ sĩ biểu diễn nhạc cụ</div>
+                                <div class="result-group-item">Chuyên gia công nghệ thực phẩm và đồ uống</div>
+                            </div>
+                            <div class="result-details">
+                                <button class="result-details-btn">
+                                    <a href="#" class="button-content">Chi tiết</a> 
+                                </button>
                             </div>
                         </div>
                     </div>
@@ -751,20 +761,25 @@
                             </div>
                             <div class="result-group-items">
                                 <div class="result-group-item">Thiết kế đồ họa</div>
-                                <div class="result-group-item">Phòng viên</div>
-                                <div class="result-group-item">Ca sĩ</div>
+                                <div class="result-group-item">Thợ thẩm mĩ (Làm đẹp)</div>
+                                <div class="result-group-item">Người làm vườn, vườn ươm và trồng hoa, cây cảnh</div>
                                 <div class="result-group-item">Nhiếp ảnh gia</div>
                                 <div class="result-group-item">Thợ thủ công mĩ nghệ</div>
-                                <div class="result-group-item">Bình luận viên</div>
+                                <div class="result-group-item">Thợ thủ công trong ngành đồ gỗ và trang trí nội thất</div>
                                 <div class="result-group-item">Nhà báo</div>
-                                <div class="result-group-item">Người mẫu</div>
+                                <div class="result-group-item">Thợ vẽ biển quảng cáo, thợ trang trí</div>
                                 <div class="result-group-item">MC truyền hình</div>
                                 <div class="result-group-item">Kiến trúc sư</div>
                                 <div class="result-group-item">Họa sĩ</div>
-                                <div class="result-group-item">Nhạc sĩ</div>
-                                <div class="result-group-item">Giáo viên dạy kịch</div>
+                                <div class="result-group-item">Nhà thiết kế đồ họa và truyền thông đa phương tiện</div>
+                                <div class="result-group-item">Nhà thiết kế quảng cáo</div>
                                 <div class="result-group-item">Nhà văn</div>
                                 <div class="result-group-item">Thiết kế thời trang</div>
+                            </div>
+                            <div class="result-details">
+                                <button class="result-details-btn">
+                                    <a href="#" class="button-content">Chi tiết</a> 
+                                </button>
                             </div>
                         </div>
                     </div>
@@ -781,18 +796,23 @@
                                 <i class="fa-regular fa-circle-check"></i>Nhóm nghề nghiệp phù hợp với bạn
                             </div>
                             <div class="result-group-items">
-                                <div class="result-group-item">Nhà hoạt động xã hội</div>
-                                <div class="result-group-item">Y tá cộng đồng</div>
-                                <div class="result-group-item">Dược tá</div>
-                                <div class="result-group-item">Nhân viên các công ty du lịch</div>
+                                <div class="result-group-item">Nhân viên công tác xã hội</div>
+                                <div class="result-group-item">Y tá và hộ sinh</div>
+                                <div class="result-group-item">Dược sĩ</div>
+                                <div class="result-group-item">Đầu bếp</div>
                                 <div class="result-group-item">Hướng dẫn viên du lịch</div>
                                 <div class="result-group-item">Huấn luyện viên</div>
                                 <div class="result-group-item">Tư vấn hướng nghiệp</div>
-                                <div class="result-group-item">Dịch vụ khách hàng</div>
+                                <div class="result-group-item">Nhân viên marketing và bán hàng</div>
                                 <div class="result-group-item">Giáo viên các cấp</div>
                                 <div class="result-group-item">Bác sĩ</div>
-                                <div class="result-group-item">Luật sĩ</div>
-                                <div class="result-group-item">Chuyên gia tư vấn bất động sản</div>
+                                <div class="result-group-item">Luật sư</div>
+                                <div class="result-group-item">Chuyên gia quản trị bất động sản</div>
+                            </div>
+                            <div class="result-details">
+                                <button class="result-details-btn">
+                                    <a href="#" class="button-content">Chi tiết</a> 
+                                </button>
                             </div>
                         </div>
                     </div>
@@ -809,17 +829,22 @@
                                 <i class="fa-regular fa-circle-check"></i>Nhóm nghề nghiệp phù hợp với bạn
                             </div>
                             <div class="result-group-items">
-                                <div class="result-group-item">Sĩ quan công an</div>
-                                <div class="result-group-item">Quản trị kinh doanh</div>
+                                <div class="result-group-item">Sĩ quan bộ đội</div>
+                                <div class="result-group-item">Chuyên gia quản trị doanh nghiệp nhỏ và vừa</div>
                                 <div class="result-group-item">Quản trị mạng</div>
-                                <div class="result-group-item">Chủ doanh nghiệp</div>
-                                <div class="result-group-item">Chủ đại lý kinh doanh</div>
+                                <div class="result-group-item">Quản lí bán hàng và marketing</div>
+                                <div class="result-group-item">Quản lí bán lẻ và bán buôn</div>
                                 <div class="result-group-item">Chuyên viên quan hệ công chúng</div>
                                 <div class="result-group-item">Quản lí khách sạn</div>
-                                <div class="result-group-item">Giám đốc ngân hàng</div>
-                                <div class="result-group-item">Quản lí giáo dục các cấp</div>
-                                <div class="result-group-item">Kế toán trưởng</div>
+                                <div class="result-group-item">Quản lí nhân sự</div>
+                                <div class="result-group-item">Chuyên gia quản lí đô thị</div>
+                                <div class="result-group-item">Nhà quản lí sự kiện</div>
                                 <div class="result-group-item">Chánh án</div>
+                            </div>
+                            <div class="result-details">
+                                <button class="result-details-btn">
+                                    <a href="#" class="button-content">Chi tiết</a> 
+                                </button>
                             </div>
                         </div>
                     </div>
@@ -836,21 +861,88 @@
                                 <i class="fa-regular fa-circle-check"></i>Nhóm nghề nghiệp phù hợp với bạn
                             </div>
                             <div class="result-group-items">
-                                <div class="result-group-item">Thanh tra các ban ngành</div>
-                                <div class="result-group-item">Thủ thư</div>
+                                <div class="result-group-item">Chuyên gia dịch vụ pháp lí</div>
                                 <div class="result-group-item">Thư ký</div>
                                 <div class="result-group-item">Nhân viên lưu trữ</div>
-                                <div class="result-group-item">Chuyên viên thuế</div>
+                                <div class="result-group-item">Nhân viên văn phòng</div>
                                 <div class="result-group-item">Kế toán viên</div>
-                                <div class="result-group-item">Tiếp tân</div>
                                 <div class="result-group-item">Nhân viên ngân hàng</div>
-                                <div class="result-group-item">Tiếp tân</div>
-                                <div class="result-group-item">Kiểm soát viên</div>
-                                <div class="result-group-item">Nghiên cứu viên</div>
+                                <div class="result-group-item">Lễ tân</div>
+                                <div class="result-group-item">Tiếp viên hàng không</div>
+                                <div class="result-group-item">Kiểm soát viên không lưu</div>
+                                <div class="result-group-item">Đại lí bảo hiểm</div>
                                 <div class="result-group-item">Công an hình sự</div>
+                                <div class="result-group-item">Thủ thư</div>
+                            </div>
+                            <div class="result-details">
+                                <button class="result-details-btn">
+                                    <a href="#" class="button-content">Chi tiết</a> 
+                                </button>
                             </div>
                         </div>
                     </div>
+                </div>
+                <div class="total-result">
+                    <h4 class="text-center">Tỉ lệ các nhóm ngành</h4>
+                    <section class="intro">
+                        <div class="bg-image h-100">
+                          <div class="mask d-flex align-items-center h-100">
+                            <div class="container">
+                              <div class="row justify-content-center">
+                                <div class="col">
+                                  <div class="card shadow-2-strong" style="background-color: #f5f7fa;">
+                                    <div class="card-body">
+                                      <div class="table-responsive">
+                                        <table class="table table-borderless mb-0">
+                                          <thead>
+                                                <tr>
+                                                    <th scope="col">#</th>
+                                                    <th scope="col">Nhóm nghề nghiệp</th>
+                                                    <th scope="col">Tỉ lệ</th>
+                                                </tr>
+                                          </thead>
+                                          <tbody>
+                                                <tr>
+                                                    <td>1</td>
+                                                    <td>Nhóm kỹ thuật</td>
+                                                    <td>70%</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>2</td>
+                                                    <td>Nhóm nghiên cứu</td>
+                                                    <td>65%</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>3</td>
+                                                    <td>Nhóm nghệ thuật</td>
+                                                    <td>60%</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>4</td>
+                                                    <td>Nhóm xã hội</td>
+                                                    <td>55%</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>5</td>
+                                                    <td>Nhóm quản lý</td>
+                                                    <td>50%</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>6</td>
+                                                    <td>Nhóm nghiệp vụ</td>
+                                                    <td>45%</td>
+                                                </tr>
+                                          </tbody>
+                                        </table>
+                                      </div>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                    </section>
                 </div>
             </div>
         </div>
